2008-03-04  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-20-03
	* fix confdb.properties

2008-03-03  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-20-02
	* intermediate fix for diff.jsp
	* updated list of DB connections

2008-02-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-20-01
	* fixes here, fixes there ...

2008-02-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-20-00
	* sql/data/gui: model primary datasets (like streams)
	* parser: implement 'pre+tags' (-a option w/o UPDATE!)
	* parser: add runParser (wrapper script)

2008-02-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-08
	* conf: include db setting for new online database
	* converter: set maxSize to 1024 for the configuration of the
	StreamFileWriter, corresponding to 1024MB now

2008-02-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-07
	* data: bugfix to ModifierInstructions.resolve(). 

2008-02-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-06
	* data: improve VStringParameter::setValue()

2008-02-17  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-05
	* gui: improve save/load/import/export configuration dialogs (filters,
	list views, doc listeners, etc.)
	* data: InputTag propagation fix ([V]PSets)
	* data: strip quotes from InputTag values

2008-02-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-04
	* db: tough bug fixed by Ulf
	* db: 'hasChanged' problem fixed
	* data: correct treatment of '-cff' parameter for edmConfigFromDB
	* converter: various fixes regardin exceptions and python (Ulf)

2008-01-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-03
	* converter: bugfix to ConverterBase::getConfiguration()

2008-01-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-02
	* db: introduce proper exception handling