@@ -191,7 +191,7 @@ public class ConfigurationTreeRenderer extends DefaultTreeCellRenderer
 		if   (esp.isPreferred()) result += "<b>"+instance.name()+"</b>";
 		else                     result += instance.name();
 	    }
-	    else result += instance.name();
+	    else result += instance.name()+ " " + instance.databaseId();
 	    if (count>0) result += " <font color=#ff0000>["+count+"]</font>";
 	    result+="</html>";
 	}
@@ -199,7 +199,7 @@ public class ConfigurationTreeRenderer extends DefaultTreeCellRenderer
 	    Path path       = (Path)node;
 	    int  entryCount = path.entryCount();
 	    int  count      = path.unsetTrackedParameterCount();
-	    result = "<html>"+getText()+" ";
+	    result = "<html>"+getText()+" "+path.databaseId()+" ";
 	    result += (entryCount>0) ?
 		"("+entryCount+")":"<font color=#ff0000>("+entryCount+")</font>";
 	    if (count>0) result += " <font color=#ff0000>["+count+"]</font>";
@@ -211,10 +211,10 @@ public class ConfigurationTreeRenderer extends DefaultTreeCellRenderer
 	    result += "</html>";
 	}
 	else if (node instanceof PathReference) {
-	    PathReference reference = (PathReference)node;
-	    Path          path      = (Path)reference.parent();
-	    int  entryCount = path.entryCount();
-	    int           count     = path.unsetTrackedParameterCount();
+	    PathReference reference  = (PathReference)node;
+	    Path          path       = (Path)reference.parent();
+	    int           entryCount = path.entryCount();
+	    int           count      = path.unsetTrackedParameterCount();
 	    result = "<html>"+getText();
 	    result += (entryCount>0) ?
 		"("+entryCount+")":"<font color=#ff0000>("+entryCount+")</font>";
@@ -227,7 +227,7 @@ public class ConfigurationTreeRenderer extends DefaultTreeCellRenderer
 	    int      entryCount = sequence.entryCount();
 	    int      count      = sequence.unsetTrackedParameterCount();
 	    result = (refCount>0) ?
-		"<html>"+getText():"<html><font color=#808080>"+getText()+"</font>";
+		"<html>"+getText()+" "+sequence.databaseId()+ " " + sequence.referenceCount():"<html><font color=#808080>"+getText()+"</font>";
 	    result += (entryCount>0) ?
 		" ("+entryCount+")":"<font color=#ff0000>("+entryCount+")</font>";
 	    if (count>0) result += " <font color=#ff0000>["+count+"]</font>";
